fix spacing of status-bar el

--- a/styles/linter-bundle.less
+++ b/styles/linter-bundle.less
@@ -24,8 +24,10 @@
 }
 
 .linter-status {
+  a + a {
+    margin-left: 0.5em;
+  }
   a {
-    padding-left: 0.5em;
     &.text-error {
       color: @text-color-error;
     }
